# Biribit

./: .gitignore  .gitmodules  Biribit.sln  CMakeLists.txt  README.md
Client/: BiribitClient.cpp  BiribitClient.h  BiribitClientExports.cpp  BiribitClientExports.h  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
Common/: BiribitMessageIdentifiers.h  CMakeLists.txt  Generic.cpp  Generic.h  Packet.cpp  Packet.h  PrintLog.cpp  PrintLog.h
ProtoMessages/: CMakeLists.txt  ProtoMessages.vcxproj  ProtoMessages.vcxproj.filters  Room.proto  ServerInfo.pb.cc  ServerInfo.pb.h  ServerInfo.proto  ServerStatus.proto
ProtoMessages/android/: config.h
ProtoMessages/android/google/protobuf/stubs/: pbconfig.h
ProtoMessages/proto/: ServerInfo.proto  buid_all.bat
RakNet/: CMakeLists.txt  RakNet.vcxproj  RakNet.vcxproj.filters
Server/: CMakeLists.txt  RakNetServer.cpp  RakNetServer.h  Server.vcxproj  Server.vcxproj.filters  ServerBiribit.cpp  ServerBiribit.h  ServerListener.h  main.cpp
TestClient/: CMakeLists.txt  Commands.cpp  Commands.h  CommandsClient.cpp  Console.cpp  Console.h  ConsoleInterface.cpp  ConsoleInterface.h  CursesClient.cpp  Game.cpp  Game.h  OpenGL.h  SDLClient.cpp  SDLcpp.cpp  SDLcpp.h  TestClient.vcxproj  TestClient.vcxproj.filters  Updater.cpp  Updater.h  imgui.ini  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
cmake/: Config.cmake  Macros.cmake
include/: Config.h  OpenGL.h  RefSwap.h  TaskPool.h
include/Biribit/: BiribitConfig.h  Client.h  Packet.h
include/Biribit/Client/: BiribitClient.h  BiribitClientExports.h  BiribitError.h  BiribitEvent.h  BiribitTypes.h
include/Biribit/Unity/: BiribitForUnity.h
lib/Win32/: libprotobuf-lite.lib
lib/x64/: libprotobuf-lite.lib
src/Biribit/: CMakeLists.txt
src/Biribit/Client/: BiribitClient.cpp  BiribitClientExports.cpp  BiribitClientImpl.cpp  BiribitClientImpl.h  BiribitClientTypes.cpp  BiribitEvent.cpp  BiribitTypes.cpp  CMakeLists.txt  ConnectionImpl.cpp  ConnectionImpl.h  ServerConnection.cpp  ServerConnection.h  ServerInfo.cpp  ServerInfo.h  ServerInfoImpl.cpp  ServerInfoImpl.h
src/Biribit/Common/: BiribitMessageIdentifiers.h  CMakeLists.txt  Debug.h  Generic.cpp  Packet.cpp  PrintLog.cpp  PrintLog.h  RefSwap.h  Types.h
src/Biribit/ProtoMessages/: CMakeLists.txt  Client.proto  Room.proto  ServerInfo.proto  ServerStatus.proto
src/Biribit/Server/: CMakeLists.txt  RakNetServer.cpp  RakNetServer.h  Server.cpp  Server.h  main.cpp
src/Biribit/Unity/: BiribitForUnity.cpp  CMakeLists.txt
src/Biribit/Unity/BiribitUnity/: BiribitClient.cs  BiribitManager.cs  NativeBuffer.cs
